--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>On Track</title>
   </head>
   <body>
-    <div id="app" class="flex flex-col min-h-screen"></div>
+    <div id="app" class="flex flex-col min-h-screen md:max-w-[600px] md:m-auto md:border md:border-l md:border-r"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
